<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_scoreboard_item">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/username"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@color/grey_200"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#00000000"
        app:layout_constraintEnd_toStartOf="@+id/tv_score"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/civ_user"
        app:layout_constraintTop_toTopOf="@+id/civ_user" />

    <TextView
        android:id="@+id/tv_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/grey_200"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/civ_user"
        app:layout_constraintEnd_toStartOf="@+id/civ_user"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/civ_user" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_spent"
        android:textSize="16sp"
        android:background="@color/grey_200"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/civ_user"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/score"
        android:textStyle="bold"
        android:background="@color/grey_200"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/civ_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/civ_user"
        app:layout_constraintTop_toTopOf="@+id/civ_user" />

</androidx.constraintlayout.widget.ConstraintLayout>